--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
+
+body {
+    background-color:rgb(248, 248, 248);
+    padding: 0; 
+    margin: 0;
+} 
+h1{
+    margin:0
+}
+a{
+    text-decoration: none;
+}
+.border-light{
+    border:1px solid rgb(180, 180, 180) !important;
+}
