--- a/src/styles.css
+++ b/src/styles.css
@@ -2,9 +2,9 @@
 
 body {
     background-color:rgb(248, 248, 248);
-    padding: 0; 
+    padding: 0;
     margin: 0;
-} 
+}
 h1{
     margin:0
 }
@@ -14,3 +14,5 @@ a{
 .border-light{
     border:1px solid rgb(180, 180, 180) !important;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
