--- a/src/app/components/authenticated/authenticated.component.html
+++ b/src/app/components/authenticated/authenticated.component.html
@@ -1,9 +1,9 @@
 <div class="header sticky-top">
-  <div class="container">
+  <div class="main-container">
     <app-header></app-header>
   </div>
 </div>
-<div class="container-news-feed">
+<div class="main-container">
   <div class="row mt-3">
     <div class="col-md-12 col-lg-8 mx-auto" >
       <router-outlet></router-outlet>
