--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,2 +1,17 @@
-<h1>NAVBAR</h1>
+<div class="row">
+  <div class="col-sm-8">
+    <div class="d-flex justify-content-between">
+      <h3>Fitness App Logo</h3>
+      <div class="d-flex align-items-center ">
+        <mat-icon>search</mat-icon>
+        <input placeholder="Search" class="search-input border-0" type="text"/>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-4 d-flex align-items-center justify-content-end">
+    <mat-icon style="transform: scale(1.4);" class="mr-3">home</mat-icon>
+    <img src="/assets/images/face.jpg" class="ms-3 rounded-circle" width="30" height="30"/>
+  </div>
+</div>
+
 
