edit-profile new

--- a/src/app/components/edit-profile/edit-profile.component.css
+++ b/src/app/components/edit-profile/edit-profile.component.css
@@ -6,5 +6,10 @@
   margin-bottom:20px;
 }
 .save-button{
-
+  min-width: 130px !important;
+  max-width: 150px !important;
+}
+.add-button{
+  min-width: 130px !important;
+  max-width: 150px !important;
 }
