--- a/src/app/components/edit-profile/edit-profile.component.html
+++ b/src/app/components/edit-profile/edit-profile.component.html
@@ -36,7 +36,7 @@
               </div>
 
               <div class="bottom row mt-5">
-                  <div class="image col-6">
+                  <div class="image col-md-6 col-sm-12">
                       <div class="image-holder">
                           <div>
                               <span class="d-flex justify-content-center align-items-center holders">Profile image</span>
@@ -48,16 +48,16 @@
                   </div>
               </div>
               <div class="buttons-group row">
-                  <div class="save-button col-6">
+                  <div class=" col-md-6 col-sm-12">
                       <div class="d-flex justify-content-center inline-block">
-                        <button class="w-50 mt-4 btn btn-primary">Add Image</button>
+                        <button class="w-50 mt-4 btn btn-secondary add-button">Add Image</button>
                       </div>
                   </div>
-                  <div class="save-button col-6">
+                  <div class="col-md-6 col-sm-12">
                       <div class="d-flex justify-content-center inline-block">
-                        <button class="w-50 mt-4 btn btn-primary">Save changes</button>
+                        <button class="w-50 mt-4 btn btn-primary save-button">Save changes</button>
                       </div>
-                </div>
+                  </div>
               </div>
           </div>
       </div>
