--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,24 @@
-.main-container{
-  width:60%;
-  margin:auto;
+.main-container {
+  width: 60%;
+  margin: auto;
 }
+/*NEWS FEED RESPONSIVE*/
+@media only screen and (max-width: 1100px) {
+  .main-container{
+    width:80%;
+  }
+}
+@media only screen and (max-width: 850px) {
+  .main-container{
+    width:90%;
+  }
+}
+@media only screen and (max-width: 600px) {
+  .main-container{
+    width:100%;
+  }
+  .side-section{
+    display: none;
+  }
+}
+
