--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,24 +1,24 @@
 .main-container {
-  width: 60%;
+  width: 950px;
   margin: auto;
-}
-/*NEWS FEED RESPONSIVE*/
-@media only screen and (max-width: 1100px) {
-  .main-container{
-    width:80%;
-  }
-}
-@media only screen and (max-width: 850px) {
-  .main-container{
-    width:90%;
-  }
 }
 @media only screen and (max-width: 600px) {
   .main-container{
     width:100%;
   }
+}
+@media only screen and (max-width: 991px) {
+  .main-container{
+    max-width:600px;
+  }
   .side-section{
     display: none;
   }
+  .dropdown-item-mobile{
+    display: flex !important;
+  }
+}
+.pa{
+  display: none;
 }
 
