--- a/src/app/components/authenticated/authenticated.component.css
+++ b/src/app/components/authenticated/authenticated.component.css
@@ -1,16 +1,7 @@
-
-.header{
-  background-color:white;
-}
-
 /*SIDE SECTION RESPONSIVE*/
-@media only screen and (min-width: 1100px) {
-  .fixed-content-side-section{
-    width:20%;
-  }
+.fixed-content-side-section{
+  width:300px;
 }
-@media only screen and (max-width: 1099px) {
-  .fixed-content-side-section{
-    width:20%;
-  }
+.header{
+  height:54px;
 }
