--- a/src/app/components/authenticated/authenticated.component.html
+++ b/src/app/components/authenticated/authenticated.component.html
@@ -1,14 +1,14 @@
-<div class="header sticky-top">
+<div class="bg-white sticky-top d-flex border-bottom header">
   <div class="main-container">
     <app-header></app-header>
   </div>
 </div>
-<div class="main-container">
+<div class="main-container container-fluid">
   <div class="row mt-3">
-    <div class="col-md-12 col-lg-8 mx-auto" >
+    <div class="col col-lg-8 mx-auto bg-white" >
       <router-outlet></router-outlet>
     </div>
-    <div class="col-md-12 col-lg-4 side-section bg-white">
+    <div class="col col-md-4 side-section bg-white">
       <div class="d-flex justify-content-center">
         <div class="position-fixed fixed-content-side-section">
           <app-side-section></app-side-section>
