--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -1,56 +1,15 @@
-<div class="d-flex flex-column ps-4 pe-4 bg-light rounded-3">
-  <div class="d-flex justify-content-between mt-2 ">
-    <div class="d-flex">
+<div class="d-flex flex-column rounded-3">
+  <div class="d-flex align-items-center justify-content-between mt-2 ">
+    <div class="d-flex align-items-center">
       <img class="rounded-circle" width="30" height="30" src="/assets/images/face.jpg" />
-      <p class="ms-2">Angela Petkova</p>
+      <span class="ms-2">Angela Petkova</span>
     </div>
     <div>
       &#11088;&#11088;Fitness Instructor
     </div>
   </div>
-  <img class="rounded-3 img-fluid mt-2" src="/assets/images/image.jpg" />
-  <div class="d-flex mt-2 justify-content-between">
-    <div class="d-flex">
-      <mat-icon>favorite</mat-icon>
-      <p>122</p>
-    </div>
-    <div>
-      <p>30 minutes ago</p>
-    </div>
-  </div>
-</div>
-<div class="d-flex flex-column ps-4 pe-4 mt-3 bg-light rounded-3">
-  <div class="d-flex justify-content-between mt-2 ">
-    <div class="d-flex">
-      <img class="rounded-circle" width="30" height="30" src="/assets/images/face.jpg" />
-      <p class="ms-2">Angela Petkova</p>
-    </div>
-    <div>
-      &#11088;&#11088;Fitness Instructor
-    </div>
-  </div>
-  <img class="rounded-3 img-fluid mt-2" src="/assets/images/image.jpg" />
-  <div class="d-flex mt-2 justify-content-between">
-    <div class="d-flex">
-      <mat-icon>favorite</mat-icon>
-      <p>122</p>
-    </div>
-    <div>
-      <p>30 minutes ago</p>
-    </div>
-  </div>
-</div>
-<div class="d-flex flex-column ps-4 pe-4 mt-3 bg-light rounded-3">
-  <div class="d-flex justify-content-between mt-2 ">
-    <div class="d-flex">
-      <img class="rounded-circle" width="30" height="30" src="/assets/images/face.jpg" />
-      <p class="ms-2">Angela Petkova</p>
-    </div>
-    <div>
-      &#11088;&#11088;Fitness Instructor
-    </div>
-  </div>
-  <img class="rounded-3 img-fluid mt-2" src="/assets/images/image.jpg" />
+  <hr class="mb-2 mt-2">
+  <img class="rounded-3 img-fluid mt-2"  width="600" height="600" src="/assets/images/image.jpg" />
   <div class="d-flex mt-2 justify-content-between">
     <div class="d-flex">
       <mat-icon>favorite</mat-icon>
