--- a/src/app/components/authenticated/authenticated.component.html
+++ b/src/app/components/authenticated/authenticated.component.html
@@ -5,7 +5,7 @@
 </div>
 <div class="main-container container-fluid">
   <div class="row mt-3">
-    <div class="col col-lg-8 mx-auto bg-white" >
+    <div class="col col-lg-8 mx-auto ps-0" >
       <router-outlet></router-outlet>
     </div>
     <div class="col col-md-4 side-section bg-white">
