--- a/src/app/components/create-workout-program/create-workout-program.component.html
+++ b/src/app/components/create-workout-program/create-workout-program.component.html
@@ -8,12 +8,12 @@
           <input class="form form-control" type="text" placeholder="Name" />
         </div>
         <div class="div-holders mt-2">
-          <span class="holders">Surname</span>
-          <input class="form form-control" type="text" placeholder="Surname" />
+          <span class="holders">Description</span>
+          <input class="form form-control" type="text" placeholder="Description" />
         </div>
         <div class="div-holders mt-2 ">
-          <span class="holders">Email</span>
-          <input class="form form-control" type="text" placeholder="Email" />
+          <span class="holders">Weeks</span>
+          <input class="form form-control" type="text" placeholder="Number Of Weeks" />
         </div>
         <div class="div-holders mt-2 ">
           <span class="holders">Username</span>
