--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -11,8 +11,8 @@
            aria-expanded="false" width="30" height="30" />
       <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
         <li><a class="dropdown-item" href="#">Profile</a></li>
-        <li class="dropdown-item-mobile pa"><a class="dropdown-item" href="#">My Instructors</a></li>
-        <li class="dropdown-item-mobile pa"><a class="dropdown-item" href="#">My Programs</a></li>
+        <li class="dropdown-item-mobile dropdown-item-info"><a class="dropdown-item" href="#">My Instructors</a></li>
+        <li class="dropdown-item-mobile dropdown-item-info"><a class="dropdown-item" href="#">My Programs</a></li>
         <li><a class="dropdown-item" href="#">Log out</a></li>
       </ul>
     </div>
