--- a/src/app/components/create-workout-program/create-workout-program.component.html
+++ b/src/app/components/create-workout-program/create-workout-program.component.html
@@ -5,54 +5,42 @@
       <div class="mt-5">
         <div class="div-holders mt-2 ">
           <span class="holders">Name</span>
-          <input class="form form-control" type="text" placeholder="Name" />
+          <input class="form form-control" type="text" placeholder="Name"/>
         </div>
         <div class="div-holders mt-2">
           <span class="holders">Description</span>
-          <input class="form form-control" type="text" placeholder="Description" />
+          <input class="form form-control" type="text" placeholder="Description"/>
         </div>
         <div class="div-holders mt-2 ">
           <span class="holders">Weeks</span>
-          <input class="form form-control" type="text" placeholder="Number Of Weeks" />
+          <input [(ngModel)]="numberOfWeeks" class="form form-control" type="number" min="0"
+                 placeholder="Number Of Weeks"/>
         </div>
-        <div class="div-holders mt-2 ">
-          <span class="holders">Username</span>
-          <input class="form form-control" type="text" placeholder="Username" />
-        </div>
-        <div class="div-holders mt-2 ">
-          <span class="holders">Password</span>
-          <input class="form form-control" type="password" placeholder="Password" />
-        </div>
-        <div class="div-holders mt-2 ">
-          <span class="holders">Confirm Password</span>
-          <input class="form form-control" type="password" placeholder="Confirm Password" />
-        </div>
-        <div class="div-holders mt-2 ">
-          <span class="holders">Description</span>
-          <textarea class="form form-control" type="textarea" placeholder="Description"></textarea>
-        </div>
-
-        <div class="bottom row mt-5">
-          <div class="image col-md-6 col-sm-12">
-            <div class="image-holder">
-              <div>
-                <span class="d-flex justify-content-center align-items-center holders">Profile image</span>
+        <div class="d-flex flex-column mt-3" *ngIf="numberOfWeeks != 0">
+          <div *ngFor="let week of numSequence(numberOfWeeks)">
+            <h2>Week {{week}}</h2>
+            <div *ngFor="let day of numSequence(7)">
+              <h2 [ngClass]="day==1 ? '' : 'mt-4'" class="text-center mb-0">Day {{day}}</h2>
+              <div class="div-holders ">
+                <span class="holders">Name</span>
+                <input class="form form-control" type="text" placeholder="Name"/>
               </div>
-              <div class="d-flex justify-content-center align-items-center mt-2">
-                <img src="/assets/images/profile-icon.png" width="130" height="130" />
+              <div class="div-holders mt-2">
+                <span class="holders">Description</span>
+                <input class="form form-control" type="text" placeholder="Description"/>
+              </div>
+              <div class="div-holders mt-2">
+                <span class="holders">Video</span>
+                <input class="form form-control" type="text" placeholder="Video Link"/>
               </div>
             </div>
+            <div class="mt-3 mb-2 divider"></div>
           </div>
         </div>
         <div class="buttons-group row">
-          <div class=" col-md-6 col-sm-12">
-            <div class="d-flex justify-content-center inline-block">
-              <button class="w-50 mt-4 btn btn-secondary add-button">Add Image</button>
-            </div>
-          </div>
-          <div class="col-md-6 col-sm-12">
-            <div class="d-flex justify-content-center inline-block">
-              <button class="w-50 mt-4 btn btn-primary save-button">Save changes</button>
+          <div class="col- ">
+            <div class="d-flex justify-content-center ">
+              <button class="mt-4 btn btn-primary save-button">Create</button>
             </div>
           </div>
         </div>
