--- a/src/app/components/edit-profile/edit-profile.component.html
+++ b/src/app/components/edit-profile/edit-profile.component.html
@@ -1,7 +1,7 @@
 <div class="d-flex justify-content-center align-items-center row">
   <div class="d-flex flex-column col-12">
     <div class="bg-white p-5">
-      <h1 class="text-center ">Create Workout Program</h1>
+      <h1 class="text-center ">Edit Profile</h1>
       <div class="mt-5">
         <div class="div-holders mt-2 ">
           <span class="holders">Name</span>
@@ -31,7 +31,6 @@
           <span class="holders">Description</span>
           <textarea class="form form-control" type="textarea" placeholder="Description"></textarea>
         </div>
-
         <div class="bottom row mt-5">
           <div class="image col-md-6 col-sm-12">
             <div class="image-holder">
@@ -39,7 +38,7 @@
                 <span class="d-flex justify-content-center align-items-center holders">Profile image</span>
               </div>
               <div class="d-flex justify-content-center align-items-center mt-2">
-                <img src="/assets/images/profile-icon.png" width="130" height="130" />
+                <img src="/assets/images/profile-icon.png" width="130" height="130"  alt="profile picture"/>
               </div>
             </div>
           </div>
