--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -1,4 +1,5 @@
-<div class="d-flex flex-column rounded-3">
+<div class="d-flex flex-column rounded-3 position-relative">
+
   <div class="d-flex align-items-center justify-content-between mt-2 ">
     <div class="d-flex align-items-center">
       <img class="rounded-circle" width="30" height="30" src="/assets/images/face.jpg" />
@@ -18,6 +19,9 @@
     <div>
       <p>30 minutes ago</p>
     </div>
+  </div>
+  <div class="d-flex justify-content-end">
+    <button class="btn  btn-danger">Delete</button>
   </div>
 </div>
 
