create-post on top of the news feed component

--- a/src/app/components/news-feed/news-feed.component.html
+++ b/src/app/components/news-feed/news-feed.component.html
@@ -1,3 +1,8 @@
-<div class="d-flex justify-content-center bg-white pt-2 ">
-  <app-post></app-post>
+<div class="d-flex flex-column justify-content-center ">
+  <div id="prv" class="bg-white pt-2 pb-2 ps-2">
+    <app-create-post></app-create-post>
+  </div>
+  <div class="mt-3 bg-white">
+    <app-post></app-post>
+  </div>
 </div>
