--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,7 +1,4 @@
-<div class="login d-flex justify-content-center align-items-center">
-    <div class="login-image">
-        <img src="/assets/images/login-image.png" width="450" height="650" />
-    </div>
+<div class="d-flex flex-column justify-content-center align-items-center login">
     <div class="login-section d-flex flex-column">
         <div class="bg-white p-5 border-light">
             <h1 class="text-center ">Fitness</h1>
