--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -1,6 +1,6 @@
 <div class="d-flex flex-column rounded-3 position-relative">
 
-  <div class="d-flex align-items-center justify-content-between mt-2 ">
+  <div class="d-flex align-items-center justify-content-between mt-2  p-2 ">
     <div class="d-flex align-items-center">
       <img class="rounded-circle" width="30" height="30" src="/assets/images/face.jpg" />
       <span class="ms-2">Angela Petkova</span>
@@ -10,16 +10,22 @@
     </div>
   </div>
   <hr class="mb-2 mt-2">
-  <img class="rounded-3 img-fluid mt-2"  width="600" height="600" src="/assets/images/image.jpg" />
-  <div class="d-flex mt-2 justify-content-between">
-    <div class="d-flex">
-      <mat-icon>favorite</mat-icon>
-      <p>122</p>
+  <img class="rounded-3 mt-2"  width="600" height="600" src="/assets/images/face.jpg" />
+  <div class="d-flex p-2 mt-2 flex-column justify-content-between">
+    <div class="d-flex justify-content-between">
+      <div class="d-flex">
+        <mat-icon>favorite</mat-icon>
+        <p>122</p>
+      </div>
+      <div>
+        <p>30 minutes ago</p>
+      </div>
     </div>
     <div>
-      <p>30 minutes ago</p>
+      <p>ewgewgge e gewgge e gegeg egewgewgge e gegeg egewgewgge e gegeg egewgewgge e gegeg egewgewgge e gegeg egewgewgge e gegeg egewgegeg egew ge gegegegg</p>
     </div>
   </div>
+
   <div class="d-flex justify-content-end">
     <button class="btn  btn-danger">Delete</button>
   </div>
