--- a/src/app/components/profile-posts/profile-posts.component.html
+++ b/src/app/components/profile-posts/profile-posts.component.html
@@ -1,6 +1,10 @@
-<div class="d-flex justify-content-center">
-  <a class="me-2 h4" routerLink="/profile/posts">Posts</a>
-  <a class="ms-2 h4" routerLink="/profile/workout-programs">Workout Programs</a>
+<div class="d-flex flex-column bg-white justify-content-center">
+  <div class="d-flex justify-content-center">
+    <a class="me-2 h4" routerLink="/profile/posts">Posts</a>
+    <a class="ms-2 h4" routerLink="/profile/workout-programs">Workout Programs</a>
+  </div>
+  <app-post></app-post>
+  <app-post></app-post>
 </div>
-<app-post></app-post><app-post></app-post><app-post></app-post><app-post></app-post>
+
 
