edit workout program component added

--- a/src/app/components/create-post/create-post.component.html
+++ b/src/app/components/create-post/create-post.component.html
@@ -6,7 +6,7 @@
   </div>
   <div class="col-9 ">
     <div>
-      <textarea class="form form-control holders" type="textarea" placeholder="What do you want to share with the community?"></textarea>
+      <textarea class="form form-control holders" type="textarea" placeholder="What muscles are you pumping today?"></textarea>
     </div>
   </div>
   <div class="col-2 ">
