--- a/src/app/components/edit-workout-program/edit-workout-program.component.html
+++ b/src/app/components/edit-workout-program/edit-workout-program.component.html
@@ -1,7 +1,7 @@
 <div class="d-flex justify-content-center align-items-center row">
   <div class="d-flex flex-column col-12">
     <div class="bg-white p-5">
-      <h1 class="text-center ">Create Workout Program</h1>
+      <h1 class="text-center ">Edit Workout Program</h1>
       <div class="mt-5">
         <div class="div-holders mt-2 ">
           <span class="holders">Name</span>
@@ -40,7 +40,7 @@
         <div class="buttons-group row">
           <div class="col- ">
             <div class="d-flex justify-content-center ">
-              <button class="mt-4 btn btn-primary save-button">Create</button>
+              <button class="mt-4 btn btn-secondary">Save changes</button>
             </div>
           </div>
         </div>
