--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -10,8 +10,9 @@
       <img src="/assets/images/face.jpg" class="dropdown-toggle ms-3 rounded-circle" data-bs-toggle="dropdown"
            aria-expanded="false" width="30" height="30" />
       <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-        <li><a class="dropdown-item" routerLink="/profile/posts">Profile</a></li>
-        <li class="dropdown-item-mobile dropdown-item-info" routerLink="/profile/programs"><a class="dropdown-item" href="#">My Programs</a></li>
+        <li><a class="dropdown-item" routerLink="/profile/posts">My Profile</a></li>
+        <li><a class="dropdown-item" routerLink="/edit-profile">Edit Profile</a></li>
+<!--        <li class="dropdown-item-mobile dropdown-item-info" routerLink="/profile/programs"><a class="dropdown-item" href="#">My Programs</a></li>-->
         <li><a class="dropdown-item" href="#">Log out</a></li>
       </ul>
     </div>
