--- a/src/app/components/workout-program/workout-program.component.html
+++ b/src/app/components/workout-program/workout-program.component.html
@@ -5,10 +5,15 @@
       <span class="holders">WK1 Name</span>
     </div>
 
+    <!-- Trainer -->
+    <div class="div-holders mt-3 ms-2">
+      <span class="holders">WK1 Trainer</span>
+    </div>
+
     <!-- Description -->
     <div class="div-holders mt-3 ms-2">
       <span class="holders">WK1 Description</span>
-      <div class="m-2">
+      <div class="m-3">
         <span>
           Ovaa programa e nameneta za zgolemuvanje na kilazata i ke se vezba toa i toa
           bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla
