--- a/src/app/components/create-post/create-post.component.html
+++ b/src/app/components/create-post/create-post.component.html
@@ -1,21 +1,23 @@
-<div class="d-flex flex-row justify-content-center align-items-center row">
-  <div class="col-1 ">
+<div class="row">
+  <div class="col col-md-1">
     <div class="d-flex align-items-center justify-content-center">
       <img class="rounded-circle" width="30" height="30" src="/assets/images/face.jpg" />
     </div>
   </div>
-  <div class="col-9 ">
+  <div class="col col-md-9">
     <div>
       <textarea class="form form-control holders" type="textarea" placeholder="What do you want to share with the community?"></textarea>
     </div>
   </div>
-  <div class="col-2 ">
-    <div>
-<!--      stole gotov kod treba da se sredi-->
-      <button id="add-photo-button"><mat-icon>add_photo_alternate</mat-icon></button>
+  <div class="col col-md-2">
+    <div class="position-relative">
+      <label class="custom-file-upload">
+        <input type="file"/>
+        <mat-icon class="">add_photo_alternate</mat-icon>
+      </label>
     </div>
     <div>
-      <button id="post-button" >Post</button>
+      <button class="" >Post</button>
     </div>
   </div>
 </div>
