--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -10,7 +10,7 @@
     </div>
   </div>
   <hr class="mb-2 mt-2">
-  <img class="rounded-3 mt-2"  width="600" height="600" src="/assets/images/face.jpg" />
+  <img class="rounded-3 mt-2 post-image" src="/assets/images/face.jpg" />
   <div class="d-flex p-2 mt-2 flex-column justify-content-between">
     <div class="d-flex justify-content-between">
       <div class="d-flex">
