--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -72,5 +72,7 @@ a:hover{
 .login{
   margin-top:3em;
 }
-
-
+/*body {*/
+/*  background-image: url('https://www.freepik.com/free-photo/abstract-luxury-blur-dark-grey-black-gradient-used-as-background-studio-wall-display-your-pr_18192039.htm') !important;*/
+/*}*/
+/*<img src="/assets/images/profile-icon.png" width="130" height="130"  alt="profile picture"/>*/
