--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
 
 body {
-    background-color:rgb(248, 248, 248);
+    /*background-color:rgb(248, 248, 248);*/
+    /*background-color: red;*/
+    /*background-image: url("https://www.freepik.com/free-photo/abstract-luxury-blur-dark-grey-black-gradient-used-as-background-studio-wall-display-your-pr_18192039.html");*/
     padding: 0;
     margin: 0;
+    /*background: #000000;  !* fallback for old browsers *!*/
+    /*background: -webkit-linear-gradient(to bottom, #434343, #000000);  !* Chrome 10-25, Safari 5.1-6 *!*/
+    /*background: linear-gradient(to bottom, #434343, #000000); !* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ *!*/
+
 }
 
 h1,h2,h3,h4,h5,h6{
