--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -2,12 +2,14 @@
     <div class="login-section d-flex flex-column">
         <div class="bg-white p-5 border-light">
             <h1 class="text-center ">Fitness</h1>
-            <div class="mt-5">
-                <input class="form form-control" type="text" placeholder="Username" />
-                <input class="mt-3 form form-control" type="password" placeholder="Password" />
+            <div class="mt-5" >
+              <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+                <input class="form form-control" formControlName="email" type="text" placeholder="Email" />
+                <input class="mt-3 form form-control" formControlName="password" type="password" placeholder="Password" />
                 <div class="d-flex justify-content-center">
-                    <button class="w-100 mt-4 btn btn-primary">Log in</button>
+                  <button class="w-100 mt-4 btn btn-primary">Log in</button>
                 </div>
+              </form>
             </div>
         </div>
         <div class="bg-white text-center mt-2 p-3 border-light">
