--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,21 +1,34 @@
 <div class="login d-flex justify-content-center align-items-center">
-    <div class="login-section d-flex flex-column">
-        <div class="bg-white p-5 border-light">
-            <h1 class="text-center ">Fitness</h1>
-            <div class="mt-5">
-                <input class="mt-2 form form-control" type="text" placeholder="Name" />
-                <input class="mt-2 form form-control" type="text" placeholder="Surname" />
-                <input class="mt-2 form form-control" type="text" placeholder="Email" />
-                <input class="mt-2 form form-control" type="text" placeholder="Username" />
-                <input class="mt-2 form form-control" type="password" placeholder="Password" />
-                <input class="mt-2 form form-control" type="password" placeholder="Confirm Password" />
-                <div class="d-flex justify-content-center">
-                    <button class="w-100 mt-4 btn btn-primary">Sign up</button>
-                </div>
+  <div class="login-section d-flex flex-column">
+    <div class="bg-white p-5 border-light">
+      <h1 class="text-center ">Fitness</h1>
+      <div class="mt-5">
+        <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+          <input class="mt-2 form form-control" formControlName="name" type="text" placeholder="Name"/>
+          <input class="mt-2 form form-control" formControlName="surname" type="text" placeholder="Surname"/>
+          <input class="mt-2 form form-control" formControlName="email" type="text" placeholder="Email"/>
+          <input class="mt-2 form form-control" formControlName="password" type="password" placeholder="Password"/>
+          <input class="mt-2 form form-control" formControlName="confirmPassword" type="password"
+                 placeholder="Confirm Password"/>
+          <div class="d-flex justify-content-between mt-2">
+            <div class="d-flex align-items-center">
+              <span>I am trainee</span>
+              <input class="ms-1" type="radio" formControlName="role" name="role" value="TRAINEE"/>
             </div>
-        </div>
-        <div class="bg-white text-center mt-2 p-3 border-light">
-            <p>Have an account? <a routerLink="/login">Log up</a></p>
-        </div>
+            <div class="d-flex align-items-center">
+              <span>I am trainer</span>
+              <input class="ms-1" type="radio" formControlName="role" name="role" value="TRAINER"/>
+            </div>
+          </div>
+
+          <div class="d-flex justify-content-center">
+            <button class="w-100 mt-4 btn btn-primary">Sign up</button>
+          </div>
+        </form>
+      </div>
     </div>
+    <div class="bg-white text-center mt-2 p-3 border-light">
+      <p>Have an account? <a routerLink="/login">Log up</a></p>
+    </div>
+  </div>
 </div>
