--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,7 @@
 
 body {
     /*background-color:rgb(248, 248, 248);*/
-    /*background-color: red;*/
+    background-color: #f8f8f8;
     /*background-image: url("https://www.freepik.com/free-photo/abstract-luxury-blur-dark-grey-black-gradient-used-as-background-studio-wall-display-your-pr_18192039.html");*/
     padding: 0;
     margin: 0;
