--- a/src/app/components/news-feed/news-feed.component.html
+++ b/src/app/components/news-feed/news-feed.component.html
@@ -3,6 +3,8 @@
     <app-create-post></app-create-post>
   </div>
   <div class="mt-3 bg-white">
-    <app-post></app-post>
+    <div *ngFor="let post of posts">
+      <app-post [post] = "post"></app-post>
+    </div>
   </div>
 </div>
