--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col col-xs-8 d-flex align-items-center">
-      <span>10059 najjachi</span>
+      <h2>Fitness Stovix</h2>
   </div>
   <div class="col col-xs-4 d-flex align-items-center justify-content-end">
     <mat-icon>search</mat-icon>
