--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,8 +1,11 @@
 <div class="login d-flex justify-content-center align-items-center">
   <div class="login-section d-flex flex-column">
-    <div class="bg-white p-5 border-light">
-      <h1 class="text-center ">Fitness</h1>
-      <div class="mt-5">
+    <div class="mb-4">
+      <img src="/assets/images/muscled.png" class="img-fluid">
+    </div>
+    <div class="bg-secondary p-4 border-light rounded-3">
+      <h1 class="text-center text-white display-3 ">Fitness Stovix</h1>
+      <div class="mt-3">
         <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
           <input class="mt-2 form form-control" formControlName="name" type="text" placeholder="Name"/>
           <input class="mt-2 form form-control" formControlName="surname" type="text" placeholder="Surname"/>
@@ -10,25 +13,26 @@
           <input class="mt-2 form form-control" formControlName="password" type="password" placeholder="Password"/>
           <input class="mt-2 form form-control" formControlName="confirmPassword" type="password"
                  placeholder="Confirm Password"/>
-          <div class="d-flex justify-content-between mt-2">
+
+          <div class="d-flex justify-content-between mt-3">
             <div class="d-flex align-items-center">
-              <span>I am trainee</span>
+              <span class="text-white">I am trainee</span>
               <input class="ms-1" type="radio" formControlName="role" name="role" value="TRAINEE"/>
             </div>
             <div class="d-flex align-items-center">
-              <span>I am trainer</span>
+              <span class="text-white">I am trainer</span>
               <input class="ms-1" type="radio" formControlName="role" name="role" value="TRAINER"/>
             </div>
           </div>
 
           <div class="d-flex justify-content-center">
-            <button class="w-100 mt-4 btn btn-primary">Sign up</button>
+            <button class="w-100 mt-3 btn btn-outline-light">Sign up</button>
           </div>
         </form>
       </div>
     </div>
-    <div class="bg-white text-center mt-2 p-3 border-light">
-      <p>Have an account? <a routerLink="/login">Log up</a></p>
+    <div class="bg-secondary text-center mt-2 mb-2 border-light rounded-3">
+      <p class="mt-2 pt-1 text-white">Have an account? <a routerLink="/login">Log up</a></p>
     </div>
   </div>
 </div>
