--- a/src/app/components/authenticated/authenticated.component.html
+++ b/src/app/components/authenticated/authenticated.component.html
@@ -1,11 +1,11 @@
-<div class="bg-white sticky-top d-flex border-bottom header w-100">
+<div class="bg-white sticky-top top-0 d-flex border-bottom header w-100">
   <div class="main-container">
     <app-header></app-header>
   </div>
 </div>
 <div class="main-container container-fluid">
   <div class="row mt-3">
-    <div class="col col-lg-8 mx-auto ps-0 pe-2 main-section" >
+    <div class="col col-lg-8 mx-auto main-section ps-0" >
       <router-outlet></router-outlet>
     </div>
     <div class="col col-md-4 side-section bg-white">
