--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -2,7 +2,9 @@
 
   <div class="d-flex align-items-center justify-content-between mt-2  p-2 ">
     <div class="d-flex align-items-center">
-      <img class="rounded-circle" width="30" height="30" src="/assets/images/face.jpg"/>
+      <div class="profile-image">
+        <img alt="Profile image" class="rounded-circle img-fluid" src="/assets/images/face.jpg"/>
+      </div>
       <span class="ms-2">{{post?.user?.name + ' ' + post?.user?.surname}}</span>
     </div>
     <div *ngIf="post?.user?.role?.toString()=='TRAINER'">
@@ -10,10 +12,10 @@
     </div>
   </div>
   <hr class="mb-2 mt-2">
-  <img class="rounded-3 mt-2 post-image" [src]="post?.image"/>
-  <div class="d-flex p-2 mt-2 flex-column justify-content-between">
-    <div class="d-flex justify-content-between">
-      <div class="d-flex">
+  <img alt="Post image" class="rounded-3 mt-2 post-image" [src]="post?.image"/>
+  <div class="d-flex mt-2 flex-column justify-content-between">
+    <div class="d-flex p-2 justify-content-between">
+      <div class="d-flex" >
         <mat-icon>favorite</mat-icon>
         <p>{{post?.muscles}}</p>
       </div>
@@ -21,7 +23,7 @@
         <p>{{post?.createdBefore}}</p>
       </div>
     </div>
-    <div>
+    <div class="p-2">
       <p>{{post?.description}}</p>
     </div>
   </div>
