--- a/src/app/components/news-feed/news-feed.component.html
+++ b/src/app/components/news-feed/news-feed.component.html
@@ -2,9 +2,12 @@
   <div class="bg-white pt-2 pb-2">
     <app-create-post></app-create-post>
   </div>
-  <div class="mt-3 bg-white">
+  <div class="mt-3 bg-white"
+       infinite-scroll
+       (scrolled)="onScrollDown()"
+       [infiniteScrollThrottle]="throttle">
     <div *ngFor="let post of posts">
-      <app-post [post] = "post"></app-post>
+      <app-post [post]="post"></app-post>
     </div>
   </div>
 </div>
