--- a/src/styles.css
+++ b/src/styles.css
@@ -1,24 +1,22 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+  background-color: #f8f8f8;
+  padding: 0;
+  margin: 0;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  margin: 0
+}
+
+a {
+  text-decoration: none;
+}
+
+.border-light {
+  border: 1px solid rgb(180, 180, 180) !important;
+}
 
 body {
-    /*background-color:rgb(248, 248, 248);*/
-    background-color: white;
-    /*background-image: url("https://www.freepik.com/free-photo/abstract-luxury-blur-dark-grey-black-gradient-used-as-background-studio-wall-display-your-pr_18192039.html");*/
-    padding: 0;
-    margin: 0;
-    /*background: #000000;  !* fallback for old browsers *!*/
-    /*background: -webkit-linear-gradient(to bottom, #434343, #000000);  !* Chrome 10-25, Safari 5.1-6 *!*/
-    /*background: linear-gradient(to bottom, #434343, #000000); !* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ *!*/
-
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
 }
-
-h1,h2,h3,h4,h5,h6{
-    margin:0
-}
-a{
-    text-decoration: none;
-}
-.border-light{
-    border:1px solid rgb(180, 180, 180) !important;
-}
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
