--- a/src/app/components/create-post/create-post.component.html
+++ b/src/app/components/create-post/create-post.component.html
@@ -4,7 +4,7 @@
   <input formControlName="description" class=" ms-2 form form-control holders me-2" type="textarea" placeholder="What muscles are you pumping today?" />
   <div class="d-flex flex-column align-items-center">
     <label class="mb-2 btn btn-secondary">
-      <input formControlName="image" type="file"/>
+      <input (change)="onFileChange($event)" type="file"/>
       <mat-icon class="text-black">add_photo_alternate</mat-icon>
     </label>
     <button class="w-100 btn btn-info" >Post</button>
