--- a/src/app/components/profile-posts/profile-posts.component.html
+++ b/src/app/components/profile-posts/profile-posts.component.html
@@ -1,10 +1,11 @@
-<div class="d-flex flex-column bg-white justify-content-center">
-  <div class="d-flex justify-content-center">
+<div class="d-flex flex-column justify-content-center">
+  <div class="d-flex justify-content-center bg-white pt-2 align-items-center mb-3">
     <a class="me-2 h4" routerLink="/profile/posts">Posts</a>
     <a class="ms-2 h4" routerLink="/profile/workout-programs">Workout Programs</a>
   </div>
-  <app-post></app-post>
-  <app-post></app-post>
+  <div *ngFor="let post of posts">
+    <app-post [post]="post"></app-post>
+  </div>
 </div>
 
 
