layout fixed style for news-feed, side-section and create-post

--- a/src/app/components/create-post/create-post.component.html
+++ b/src/app/components/create-post/create-post.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex align-items-center bg-white border p-2">
+<div class="d-flex align-items-center bg-white border rounded p-2">
   <img class="ms-0 rounded-circle" width="30" height="30" src="/assets/images/face.jpg" />
   <form class="d-flex w-100" [formGroup]="createPostForm" (ngSubmit)="onSubmit()">
   <input formControlName="description" class="ms-2 form form-control holders me-2" type="textarea" placeholder="What muscles are you pumping today?" />
