--- a/src/app/components/authenticated/authenticated.component.html
+++ b/src/app/components/authenticated/authenticated.component.html
@@ -8,7 +8,7 @@
     <div class="col col-lg-8 mx-auto main-section ps-0" >
       <router-outlet></router-outlet>
     </div>
-    <div class="col col-md-4 side-section bg-white">
+    <div class="col col-md-4 side-section bg-white  border rounded">
       <div class="d-flex justify-content-center">
         <div class="position-fixed fixed-content-side-section">
           <app-side-section></app-side-section>
