--- a/src/app/components/news-feed/news-feed.component.html
+++ b/src/app/components/news-feed/news-feed.component.html
@@ -1,8 +1,8 @@
 <div class="d-flex flex-column justify-content-center">
-  <div class="pt-2 pb-2">
+  <div class="pb-2">
     <app-create-post></app-create-post>
   </div>
-  <div class="mt-3"
+  <div class="mt-2"
        infinite-scroll
        (scrolled)="onScrollDown()"
        [infiniteScrollThrottle]="throttle">
