--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -4,7 +4,17 @@
   </div>
   <div class="col col-xs-4 d-flex align-items-center justify-content-end pe-0">
     <mat-icon>search</mat-icon>
-    <input placeholder="Search" class="me-3 search-input border-light" type="text"/>
+    <div class="position-relative">
+      <input [formControl]="searchForm" placeholder="Search" class="me-4 search-input border-light" type="text"/>
+      <div *ngIf="users!==undefined && users.length!==0"  style="left:;-100px; margin:auto; width:400px; max-height: 300px; overflow: auto;" class="mt-1 p-2 border position-absolute bg-white">
+        <div *ngFor="let user of users" class="mb-2">
+            <div class="d-flex align-items-center">
+              <img [src]="user.image" width="50" height="50" class="rounded-circle"/>
+              <span class="ps-2">{{user.name+' '+user.surname}}</span>
+            </div>
+        </div>
+      </div>
+    </div>
     <a routerLink="/"><mat-icon class="home-icon me-3">home</mat-icon></a>
     <div class="dropdown profile-image">
       <img alt="Profile image" src="/assets/images/face.jpg" class="dropdown-toggle rounded-circle img-fluid" data-bs-toggle="dropdown"
