--- a/src/app/components/profile-posts/profile-posts.component.html
+++ b/src/app/components/profile-posts/profile-posts.component.html
@@ -3,6 +3,9 @@
     <a class="me-2 h4" routerLink="/profile/posts">Posts</a>
     <a class="ms-2 h4" routerLink="/profile/workout-programs">Workout Programs</a>
   </div>
+  <div *ngIf="posts?.length===0">
+    <p class="text-center">You do not have any posts</p>
+  </div>
   <div *ngFor="let post of posts">
     <app-post [post]="post"></app-post>
   </div>
